// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Feed Screen Content Link Card Matches Snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "rgba(0, 0, 0, 0.5)",
        "borderRadius": 8,
        "borderWidth": 0.5,
        "height": 225,
        "marginBottom": 5,
        "overflow": "hidden",
        "paddingBottom": 8,
      },
      undefined,
    ]
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="contentLinkHeaderPress"
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingVertical": 8.5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 45,
              "borderWidth": 0.2,
              "height": 24,
              "justifyContent": "center",
              "width": 24,
            }
          }
        >
          <View
            style={
              Object {
                "height": 24,
                "width": 24,
              }
            }
            testID="iconDomainProfilePictureEmptyState"
          >
            <View />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "height": undefined,
                "width": undefined,
              },
              Object {
                "width": 0,
              },
            ]
          }
          testID="gap"
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "flex": 1,
              "justifyContent": "space-around",
              "marginLeft": 8,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginRight": 8,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#1E1F20",
                  "flexShrink": 1,
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "lineHeight": 16,
                }
              }
            >
              human-id.org
            </Text>
            <View
              style={
                Object {
                  "backgroundColor": "#9B9FA9",
                  "borderRadius": 4,
                  "height": 3,
                  "marginLeft": 6,
                  "marginRight": 6,
                  "marginTop": 1,
                  "width": 3,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#828282",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 12,
                }
              }
            >
              NaNw
            </Text>
            <View
              style={
                Object {
                  "backgroundColor": "#9B9FA9",
                  "borderRadius": 4,
                  "height": 3,
                  "marginLeft": 6,
                  "marginRight": 6,
                  "marginTop": 1,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "borderRadius": 8,
                  "flexDirection": "row",
                  "height": 16,
                }
              }
            >
              <View />
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "color": "#828282",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 12,
                    "lineHeight": 14.52,
                    "marginLeft": 4,
                  }
                }
              >
                n/a
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="contentLinkContentPress"
    >
      <Text
        style={
          Object {
            "color": "#1E1F20",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12.600000000000001,
            "fontWeight": "600",
            "lineHeight": 13.600000000000001,
            "marginBottom": 3.2,
            "paddingLeft": 16,
            "paddingRight": 16,
          }
        }
      >
        humanID: One-click, Anonymous Login
      </Text>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <FastImageView
            defaultSource={null}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../src/assets/images/news-empty-state.png",
              }
            }
            testID="contentLinkImageEmptyStateImage"
          />
        </View>
      </View>
      <Text
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 10.8,
            "lineHeight": 14.4,
            "marginTop": 3.2,
            "paddingLeft": 16,
            "paddingRight": 16,
          }
        }
      >
        Seamlessly integrate with our anonymous, bot-resistant, one-click login to create a safer community for your users.
        <View
          style={
            Array [
              Object {
                "height": undefined,
                "width": undefined,
              },
              Object {
                "width": 2,
              },
            ]
          }
          testID="gap"
        />
        <Text
          style={
            Object {
              "color": "#2F80ED",
              "fontSize": 12,
              "marginStart": 8,
              "textDecorationLine": "underline",
            }
          }
          testID="contentLinkOpenLinkPress"
        >
          Open Link
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`Testing Feed Screen Content Link CardHeader Matches Snapshot 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingVertical": 8.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "rgba(0, 0, 0, 0.5)",
        "borderRadius": 45,
        "borderWidth": 0.2,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
      testID="iconDomainProfilePictureEmptyState"
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "width": 0,
        },
      ]
    }
    testID="gap"
  />
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "justifyContent": "space-around",
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#1E1F20",
            "flexShrink": 1,
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "fontWeight": "bold",
            "lineHeight": 16,
          }
        }
      >
        human-id.org
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#9B9FA9",
            "borderRadius": 4,
            "height": 3,
            "marginLeft": 6,
            "marginRight": 6,
            "marginTop": 1,
            "width": 3,
          }
        }
      />
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
          }
        }
      >
        NaNw
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#9B9FA9",
            "borderRadius": 4,
            "height": 3,
            "marginLeft": 6,
            "marginRight": 6,
            "marginTop": 1,
            "width": 3,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "height": 16,
          }
        }
      >
        <View />
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#828282",
              "fontFamily": "Inter-Regular",
              "fontSize": 12,
              "lineHeight": 14.52,
              "marginLeft": 4,
            }
          }
        >
          n/a
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Feed Screen Content Link ContentLink Matches Snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "position": "relative",
        "width": "100%",
      },
      Object {
        "flex": 1,
      },
    ]
  }
  testID="blurredLayer"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "marginHorizontal": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgba(0, 0, 0, 0.5)",
            "borderRadius": 8,
            "borderWidth": 0.5,
            "height": 225,
            "marginBottom": 5,
            "overflow": "hidden",
            "paddingBottom": 8,
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="contentLinkHeaderPress"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingVertical": 8.5,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(0, 0, 0, 0.5)",
                  "borderRadius": 45,
                  "borderWidth": 0.2,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 24,
                    "width": 24,
                  }
                }
                testID="iconDomainProfilePictureEmptyState"
              >
                <View />
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "height": undefined,
                    "width": undefined,
                  },
                  Object {
                    "width": 0,
                  },
                ]
              }
              testID="gap"
            />
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flex": 1,
                  "justifyContent": "space-around",
                  "marginLeft": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 8,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#1E1F20",
                      "flexShrink": 1,
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 14,
                      "fontWeight": "bold",
                      "lineHeight": 16,
                    }
                  }
                >
                  human-id.org
                </Text>
                <View
                  style={
                    Object {
                      "backgroundColor": "#9B9FA9",
                      "borderRadius": 4,
                      "height": 3,
                      "marginLeft": 6,
                      "marginRight": 6,
                      "marginTop": 1,
                      "width": 3,
                    }
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#828282",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 12,
                    }
                  }
                >
                  Jan 6, 0001
                </Text>
                <View
                  style={
                    Object {
                      "backgroundColor": "#9B9FA9",
                      "borderRadius": 4,
                      "height": 3,
                      "marginLeft": 6,
                      "marginRight": 6,
                      "marginTop": 1,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "center",
                      "borderRadius": 8,
                      "flexDirection": "row",
                      "height": 16,
                    }
                  }
                >
                  <View />
                  <Text
                    style={
                      Object {
                        "alignSelf": "center",
                        "color": "#828282",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 12,
                        "lineHeight": 14.52,
                        "marginLeft": 4,
                      }
                    }
                  >
                    n/a
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          testID="contentLinkContentPress"
        >
          <Text
            style={
              Object {
                "color": "#1E1F20",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 12.600000000000001,
                "fontWeight": "600",
                "lineHeight": 13.600000000000001,
                "marginBottom": 3.2,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            humanID: One-click, Anonymous Login
          </Text>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <FastImageView
                defaultSource={null}
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/assets/images/news-empty-state.png",
                  }
                }
                testID="contentLinkImageEmptyStateImage"
              />
            </View>
          </View>
          <Text
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "color": "#828282",
                "fontFamily": "Inter-Regular",
                "fontSize": 10.8,
                "lineHeight": 14.4,
                "marginTop": 3.2,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            Seamlessly integrate with our anonymous, bot-resistant, one-click login to create a safer community for your users.
            <View
              style={
                Array [
                  Object {
                    "height": undefined,
                    "width": undefined,
                  },
                  Object {
                    "width": 2,
                  },
                ]
              }
              testID="gap"
            />
            <Text
              style={
                Object {
                  "color": "#2F80ED",
                  "fontSize": 12,
                  "marginStart": 8,
                  "textDecorationLine": "underline",
                }
              }
              testID="contentLinkOpenLinkPress"
            >
              Open Link
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
